[gd_scene load_steps=2 format=3 uid="uid://bqk8y7x3xqxqx"]

[ext_resource type="Script" path="res://Scripts/UI/PauseMenu.gd" id="1"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "PAUSED"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Controls" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Controls"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Controls/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ForwardButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Controls/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Forward: W"

[node name="BackwardButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Controls/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Backward: S"

[node name="LeftButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Controls/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Left: A"

[node name="RightButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Controls/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Right: D"

[node name="Graphics" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Graphics"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Graphics/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResolutionLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Graphics/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Resolution:"

[node name="ResolutionOption" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Graphics/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="FullscreenCheck" type="CheckButton" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Graphics/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="VsyncCheck" type="CheckButton" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Graphics/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "VSync"

[node name="Audio" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_tab_index = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Audio"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Audio/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MasterLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Audio/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Audio/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Audio/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Audio/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="SfxLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Audio/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "SFX Volume"

[node name="SfxSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Audio/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ResumeButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Resume"

[node name="QuitButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Quit to Desktop"
